--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: sync-Squaregentleman/mimotion
 
 on:
   schedule:
-  - cron:  "*/15 * * * *"
+  - cron:  "0 9 * * *"
   workflow_dispatch:
   watch:
     types: started
